--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<jbehave.version>3.6</jbehave.version>
 		<junit.version>4.10</junit.version>
 		<mockito.version>1.9.0</mockito.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
 		<keystore.password>dev_password</keystore.password>
 		<gpg.passphrase>dev</gpg.passphrase>
 		<passphrase>${gpg.passphrase}</passphrase>
@@ -133,6 +134,11 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
 
