--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 	</scm>
 
 	<properties>
-		<jbehave.version>3.6</jbehave.version>
+		<jbehave.version>3.7</jbehave.version>
 		<junit.version>4.10</junit.version>
 		<mockito.version>1.9.0</mockito.version>
 		<spring.version>3.2.2.RELEASE</spring.version>
@@ -139,6 +139,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>org.jbehave</groupId>
+			<artifactId>jbehave-spring</artifactId>
+			<version>${jbehave.version}</version>
 		</dependency>
 	</dependencies>
 
